syntax = "proto3";
service TrendingMoviesService {
    rpc GetTopMovies (TopMoviesRequest) returns (TopMoviesResponse);
}

message TopMoviesRequest {
    int32 count = 1;
}


message MovieRating {
    string movieId = 1;
    int32 rating = 2;
}
message TopMoviesResponse {
repeated MovieRating ratings = 1;
}



